# gcmc

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: configuration.md
docs/configuration/: adsorbate.md  alloy.md  shared.md
examples/: POSCAR  analyse_cluster.py  cu_gcmc_300_-5.0.traj  run_cmc_alloy.py  run_gcmc.py  run_mxene_alloy.py
examples/adsorbate/: README.md  adsorbate_cmc.yaml  adsorbate_gcmc.yaml  adsorbate_gcmc_scan.yaml  analyse_cluster.py  run_adsorbate_cmc.py  run_adsorbate_gcmc.py  run_adsorbate_gcmc_scan.py  run_gcmc.py  run_pt_adsorbate_cmc.py
examples/adsorbate/analysis/: analyze_adsorbate_gcmc_scan.py
examples/adsorbate/configs/: adsorbate_cmc.yaml  adsorbate_gcmc.yaml  adsorbate_gcmc_scan.yaml
examples/adsorbate/runners/: common.py  run_adsorbate_cmc.py  run_adsorbate_gcmc.py  run_adsorbate_gcmc_scan.py  run_gcmc.py  (+1 more)
examples/alloy/: README.md  alloy_cmc.yaml  alloy_pt.yaml  alloy_pt_ray.yaml  analyze_mxene_ordering.py  analyze_mxene_sro.py  analyze_surface_motifs.py  generate_adsorption_sites.py  plot_mxene_sro_summary.py  run_cmc_alloy.py  run_pt_cmc_alloy.py  run_pt_cmc_alloy_ray.py  run_pt_cmc_alloy_ray.slurm
gcmc/: __init__.py  adsorbate_cmc.py  adsorbate_gcmc.py  alloy_cmc.py  base.py  cluster_analysis.py  cmc.py  constants.py  execution_backends.py  gcmc.py  process_replica.py  replica.py  sgcmc.py  utils.py  workflows.py
gcmc.egg-info/: PKG-INFO  SOURCES.txt
gcmc/analysis/: __init__.py  motifs.py  ordering.py  sites.py  sro.py
scripts/slurm/: ray_slurm_common.sh
tests/: __init__.py  test_adsorbate_gcmc.py  test_execution_backends.py  test_mu_replica_exchange.py  test_mxene_sites.py  test_workflow_constraints.py
(+13 files in other folders)
